// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`annotate with context and style options annotates when environment variables are set 1`] = `
"
buildkite-agent
annotate
--context
step-id-skuba-test
--style
error
**Message**
"
`;

exports[`annotate with context option annotates when environment variables are set 1`] = `
"
buildkite-agent
annotate
--context
step-id-skuba-lint
**Message**
"
`;

exports[`annotate with empty options annotates when environment variables are set 1`] = `
"
buildkite-agent
annotate
--context
step-id
**Message**
"
`;

exports[`annotate with style option annotates when environment variables are set 1`] = `
"
buildkite-agent
annotate
--context
step-id
--style
info
**Message**
"
`;

exports[`annotate with undefined options annotates when environment variables are set 1`] = `
"
buildkite-agent
annotate
--context
step-id
**Message**
"
`;
